CAMEL-10141: make camel-soap unit tests pass on Java 9